collapse bug fix

--- a/network/static/network/styles.css
+++ b/network/static/network/styles.css
@@ -85,6 +85,7 @@
 
 #labelForNewPost {
     color: #07405aa6;
+    margin-bottom: 0px;
 }
 
 .searchInput:focus {
@@ -147,7 +148,10 @@
 
 #new_post_area {
     border: solid rgb(196, 192, 192) 1px;
-    padding: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 10px;
+    padding-top: 10px;
     border-radius: 5px;
     box-shadow: 0px 0px 10px 5px rgba(104, 143, 175, 0.192)
 }
